--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,5 +1,6 @@
 .navbar{
-    background-color: rgb(207, 207, 203);
+    background-color: rgb(219, 219, 214);
+    padding: 40px;
 }
 .nav-links {
     display: flex;
