--- a/src/components/pages/userReviewPage/feedbackform.css
+++ b/src/components/pages/userReviewPage/feedbackform.css
@@ -3,7 +3,6 @@
   .feedback-form {
     width: 100%; /* Adjust the width as needed */
     padding: 20px;
-    border: 1px solid #ccc;
     border-radius: 10px;
     background-color: #fff; /* White background for the form */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -143,4 +142,6 @@
     width: auto; /* Allow button to fit naturally */
     margin-top: 20px;
   }
-  
+  .page-wrapper{
+    padding-top: 0;
+  }
